@@ -17,7 +17,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA
  *
- * $Id: xine.h.in,v 1.24 2002/10/24 16:41:05 mroi Exp $
+ * $Id: xine.h.in,v 1.25 2002/10/24 19:37:27 guenter Exp $
  *
  * public xine-lib (libxine) interface and documentation
  *
@@ -297,9 +297,9 @@ void   xine_register_log_cb (xine_t *self, xine_log_cb_t cb,
 #define XINE_PARAM_AUDIO_CHANNEL_LOGICAL   3 /* -1 => auto, -2 => off       */ 
 #define XINE_PARAM_SPU_CHANNEL             4 
 #define XINE_PARAM_VIDEO_CHANNEL           5  
-#define XINE_PARAM_AUDIO_VOLUME            6 /* 0..255                      */
+#define XINE_PARAM_AUDIO_VOLUME            6 /* 0..100                      */
 #define XINE_PARAM_AUDIO_MUTE              7 /* 1=>mute, 0=>unmute          */
-#define XINE_PARAM_AUDIO_COMPR_LEVEL       8 /* 0..255                      */
+#define XINE_PARAM_AUDIO_COMPR_LEVEL       8 /* <100=>off, % compress otherw*/
 #define XINE_PARAM_AUDIO_AMP_LEVEL         9 /* 0..200, 100=>100% (default) */
 #define XINE_PARAM_AUDIO_REPORT_LEVEL     10 /* 1=>send events, 0=> don't   */
 
